service_nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine
spec:
  ports:
  - name: redmine
    protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30016
  selector:
    app: redmine
  type: NodePort
